--- a/ansible/create_linux_service_accounts.yml
+++ b/ansible/create_linux_service_accounts.yml
@@ -4,7 +4,7 @@
 #   This playbook checks for the existence of our standard set of service accounts for Linux
 #   servers and creates them if missing.
 # PARAMETER <Parameter_Name>
-#   --extra-vars "svc_veeam_pass=*** svc_solarwinds_pass=*** svc_nessus_pass=***"
+#   --extra-vars "svc_backups=*** svc_monitoring=*** svc_scanner=***"
 # INPUTS
 #   None
 # OUTPUTS
@@ -16,7 +16,7 @@
 #
 #   Be sure to pass the service account passwords as variables. Replace with info from your secrets manager as appropriate.
 # EXAMPLE
-#   ansible-playbook create_linux_service_accounts.yml -i your_inventory.yml --extra-vars "svc_veeam_pass=*** svc_solarwinds_pass=*** svc_nessus_pass=***" -u your_user -b
+#   ansible-playbook create_linux_service_accounts.yml -i your_inventory.yml --extra-vars "svc_backups_pass=*** svc_monitoring_pass=*** svc_scanner_pass=***" -u your_user -b
 ---
 - name: Create standard service accounts for Linux servers
   hosts: all
@@ -31,34 +31,34 @@
 
   # Execute actions
   tasks:
-    # Create the service account for Veeam Backup and Replication
-    - name: Create Veeam Backup and Replication service account
+    # Create the service account for the backup platform
+    - name: Create backups service account
       ansible.builtin.user:
-        name: svc_veeam
-        password: "{{ svc_veeam_pass | password_hash('sha512', 'salt') }}"
-        comment: svc_veeam
+        name: svc_backups
+        password: "{{ svc_backups | password_hash('sha512', 'salt') }}"
+        comment: backups
         shell: /bin/bash
         groups: sudo
         append: yes
         state: present
 
-    # Create the service account for SolarWinds Orion
-    - name: Create SolarWinds Orion service account
+    # Create the service account for the observability platform
+    - name: Create observability service account
       ansible.builtin.user:
-        name: svc_solarwinds
-        password: "{{ svc_solarwinds_pass | password_hash('sha512', 'salt') }}"
-        comment: svc_solarwinds
+        name: svc_monitoring
+        password: "{{ svc_monitoring | password_hash('sha512', 'salt') }}"
+        comment: svc_monitoring
         shell: /bin/bash
         groups: sudo
         append: yes
         state: present
 
-    # Create the service account for Nessus Professional/Tenable.io
-    - name: Create Nessus Professional/Tenable.io service account
+    # Create the service account for the vulnerabilitiy scanner
+    - name: Create vulnerability scanner service account
       ansible.builtin.user:
-        name: svc_nessus
-        password: "{{ svc_nessus_pass | password_hash('sha512', 'salt') }}"
-        comment: svc_nessus
+        name: svc_scanner
+        password: "{{ svc_scanner | password_hash('sha512', 'salt') }}"
+        comment: svc_scanner
         shell: /bin/bash
         create_home: yes
         groups: sudo
